--- a/test-project/css/style.css
+++ b/test-project/css/style.css
@@ -51,9 +51,9 @@ body {
     height: 350px;
     position: absolute;
     left: 1045px;
-    -webkit-transition: all 2.5s;
-    -moz-transition: all 2.5s;
-    transition: all 2.5s; }
+    -webkit-transition: all;
+    -moz-transition: all;
+    transition: all; }
     .logo-container .box.slide-in {
       left: 0;
       -webkit-transition-timing-function: ease-out;
@@ -61,7 +61,10 @@ body {
       transition-timing-function: ease-out;
       -webkit-transition-delay: 2.5s;
       -moz-transition-delay: 2.5s;
-      transition-delay: 2.5s; }
+      transition-delay: 2.5s;
+      -webkit-transition-duration: 2.5s;
+      -moz-transition-duration: 2.5s;
+      transition-duration: 2.5s; }
     .logo-container .box.slide-out {
       left: calc(0% - 590px);
       -webkit-transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
@@ -69,7 +72,10 @@ body {
       transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
       -webkit-transition-delay: 1s;
       -moz-transition-delay: 1s;
-      transition-delay: 1s; }
+      transition-delay: 1s;
+      -webkit-transition-duration: 1s;
+      -moz-transition-duration: 1s;
+      transition-duration: 1s; }
 
 #red {
   background-color: red; }
