--- a/test-project/scss/style.scss
+++ b/test-project/scss/style.scss
@@ -26,14 +26,24 @@ body {
 }
 
 .player-container {
+  z-index: 2;
+  position: absolute;
   display: block;
   width: 1280px;
   height: 720px;
   overflow: hidden;
-  background: url("../img/grid.png");
-  border: 1px solid black;
+  // border: 1px solid black;
 }
-.gradient {
+
+.grid-container {
+  z-index: 0;
+  width: 1280px;
+  height: 720px;
+  background: url("../img/grid.png");
+}
+
+.gradient-container {
+  position: absolute;
   display: block;
   width: 1280px;
   height: 720px;
@@ -41,15 +51,15 @@ body {
   background: url('../img/bg.png');
   opacity: 0;
 
-    &.fullplayer-in {
-      opacity: 1;
-      @include transition(opacity 1s ease-out 0.5s);
-    }
+  &.fullplayer-in {
+    opacity: 1;
+    @include transition(opacity 2.5s ease-out);
+  }
 
-    &.fullplayer-out {
-      opacity: 0;
-      @include transition(opacity 1s ease-in 2.5s);
-    }
+  &.fullplayer-out {
+    opacity: 0;
+    @include transition(opacity 1s ease-in 2.5s);
+  }
 }
 
 .content-container {
@@ -106,6 +116,11 @@ body {
       @include transition-delay(1.5s);
       @include transition-duration(1s);
     }
+
+    &.fade-in-first-logo {
+      left: 0;
+      @include transition(opacity 0.5s ease-out 2.0s);
+    }
   }
 }
 
@@ -154,3 +169,6 @@ body {
 #blue-content{
 }
 
+.fade-in-first-content {
+  opacity: 1;
+}
