--- a/test-project/css/style.css
+++ b/test-project/css/style.css
@@ -43,9 +43,18 @@ body {
     transition: opacity 2.5s ease-out; }
   .gradient-container.fullplayer-out {
     opacity: 0;
-    -webkit-transition: opacity 1s ease-in 2.5s;
-    -moz-transition: opacity 1s ease-in 2.5s;
-    transition: opacity 1s ease-in 2.5s; }
+    -webkit-transition: opacity 1s ease-in 3s;
+    -moz-transition: opacity 1s ease-in 3s;
+    transition: opacity 1s ease-in 3s; }
+
+.invisible-button {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
+  left: 664px;
+  top: 123px;
+  z-index: 100; }
 
 .content-container {
   display: block;
