--- a/Deezer-lyrics/scss/style.scss
+++ b/Deezer-lyrics/scss/style.scss
@@ -44,20 +44,36 @@ body {
   z-index: 4;
 }
 
-.micro{
+.micro-off, .micro-on{
   position: absolute;
   top: 644px;
   left: 947px;
   display: block;
   width: 36px;
   height: 36px;
+}
+
+.micro-off {
   background: url('../img/sprite.png') 0 0 no-repeat;
 
-    &:hover{
-      background-position: 0 -36px;
-      cursor: pointer;
-    }
-    &:active, :visited{
-      background-position: 0 -72px;
-    }
+  &:hover{
+    background-position: 0 -36px;
+    cursor: pointer;
+  }
+  &:active{
+    background-position: 0 -72px;
+  }
+}
+
+.micro-on {
+  background: url('../img/sprite.png') 0 -72px no-repeat;
+  display: none;
+
+  &:hover{
+    background-position: 0 -108px;
+    cursor: pointer;
+  }
+  &:active{
+    background-position: 0 0px;
+  }
 }
