--- a/Deezer-lyrics/css/style.css
+++ b/Deezer-lyrics/css/style.css
@@ -21,7 +21,18 @@ body {
   height: 400px;
   top: 140px;
   left: 448px;
-  z-index: 3; }
+  z-index: 3;
+  background: url("../img/artwork.png"); }
+  .artwork-container.artwork-fade-in {
+    opacity: 1;
+    -webkit-transition: opacity 0.5s ease-out;
+    -moz-transition: opacity 0.5s ease-out;
+    transition: opacity 0.5s ease-out; }
+  .artwork-container.artwork-fade-out {
+    opacity: 0;
+    -webkit-transition: opacity 0.5s ease-in;
+    -moz-transition: opacity 0.5s ease-in;
+    transition: opacity 0.5s ease-in; }
 
 .content {
   position: absolute;
