--- a/Deezer-lyrics/css/style.css
+++ b/Deezer-lyrics/css/style.css
@@ -4,7 +4,6 @@ body {
     color: #ffffff;
     font-size: 18px;
     word-wrap: break-word;
-    margin: 20px;
     text-align: center; }
   body p:first-letter {
     text-transform: uppercase; }
@@ -37,8 +36,7 @@ body {
 .lyrics-container {
   position: absolute;
   opacity: 0;
-  width: 400px;
-  top: 120px;
+  top: 200px;
   left: 70px; }
   .lyrics-container.lyrics-fade-in {
     opacity: 1;
@@ -53,10 +51,18 @@ body {
 
 .current-line {
   width: 1090px;
-  height: 110px;
   padding: 25px;
-  background-color: #1990db;
-  opacity: 0.6; }
+  font-size: 60px;
+  line-height: 60px;
+  background-color: rgba(25, 144, 219, 0.6);
+  margin: 0 auto 40px; }
+
+.second-line {
+  width: 900px;
+  padding: 25px;
+  font-size: 50px;
+  line-height: 50px;
+  margin: 0 auto; }
 
 .micro-off, .micro-on {
   position: absolute;
