--- a/Deezer-lyrics/css/style.css
+++ b/Deezer-lyrics/css/style.css
@@ -62,7 +62,11 @@ body {
   padding: 25px;
   font-size: 50px;
   line-height: 50px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  opacity: 0.8; }
+
+.unvisible-lines {
+  opacity: 0; }
 
 .micro-off, .micro-on {
   position: absolute;
