--- a/Deezer-lyrics/scss/style.scss
+++ b/Deezer-lyrics/scss/style.scss
@@ -75,6 +75,11 @@ body {
   font-size: 50px;
   line-height: 50px;
   margin: 0 auto;
+  opacity: 0.8;
+}
+
+.unvisible-lines {
+  opacity: 0;
 }
 
 .micro-off, .micro-on{
