--- a/Deezer-lyrics/scss/style.scss
+++ b/Deezer-lyrics/scss/style.scss
@@ -46,7 +46,7 @@ body {
 
 .lyrics-container {
   position: absolute;
-  opacity: 0;
+  //opacity: 0;
   top: 200px;
   left: 70px;
 
@@ -60,27 +60,47 @@ body {
   }
 }
 
-.current-line {
+.lyrics-default {
+  top: 200px;
+  position: absolute;
+  @include box-sizing(border-box);
+  //width: 900px;
   width: 1090px;
-  padding: 25px;
-  font-size: 60px;
-  line-height: 60px;
-  background-color: rgba(#1990db, 0.6);
-  margin: 0 auto 40px;
+  padding: 25px (190px / 2) !important;
+  margin: 0 auto;
 }
 
-.second-line {
-  width: 900px;
+.current-line {
+  top: 0 !important;
+  position: absolute;
+  @include box-sizing(border-box);
+  @include transition(all 2.0s ease-in-out);
+  width: 1090px;
   padding: 25px;
   font-size: 50px;
   line-height: 50px;
-  margin: 0 auto;
+  background-color: rgba(#1990db, 0.6);
+  // margin: 0 auto 40px;
+
+  &.finished{
+  opacity: 0;
+  top: -50px !important;
+  @include transition(all 2.0s ease-in-out);
+  }
+}
+
+.second-line {
   opacity: 0.8;
+  @include transition(opacity 2.0s ease-in-out);
+  font-size: 50px;
+  line-height: 50px;
 }
 
 .unvisible-lines {
   opacity: 0;
 }
+
+
 
 .micro-off, .micro-on{
   position: absolute;
