--- a/Deezer-lyrics/scss/style.scss
+++ b/Deezer-lyrics/scss/style.scss
@@ -6,6 +6,8 @@ $wsize : 400px;
 $hsize : 400px;
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Helvetica Neue', sans-serif;
   p {
     color: #ffffff;
@@ -46,9 +48,8 @@ body {
 
 .lyrics-container {
   position: absolute;
-  //opacity: 0;
   top: 200px;
-  left: 70px;
+  left: 64px;
 
   &.lyrics-fade-in {
     opacity: 1;
@@ -64,10 +65,11 @@ body {
   top: 200px;
   position: absolute;
   @include box-sizing(border-box);
-  //width: 900px;
-  width: 1090px;
-  padding: 25px (190px / 2) !important;
+  width: (1280px - 128px);
   margin: 0 auto;
+  padding: 25px;
+  font-size: 50px;
+  line-height: 50px;
 }
 
 .current-line {
@@ -75,25 +77,18 @@ body {
   position: absolute;
   @include box-sizing(border-box);
   @include transition(all 1.5s ease-in-out);
-  width: 1090px;
-  padding: 25px;
-  font-size: 50px;
-  line-height: 50px;
   background-color: rgba(#1990db, 0.6);
-  // margin: 0 auto 40px;
 
   &.finished{
     opacity: 0;
     top: -50px !important;
-    @include transition(all 2.5s ease-in-out);
+    @include transition(all 1s ease-in-out);
   }
 }
 
 .second-line {
-  opacity: 0.8;
-  @include transition(opacity 1.5s ease-in-out);
-  font-size: 50px;
-  line-height: 50px;
+  opacity: 0.7;
+  @include transition(opacity 2.5s ease-in-out 2.0s);
 }
 
 .unvisible-lines {
@@ -104,8 +99,8 @@ body {
 
 .micro-off, .micro-on{
   position: absolute;
-  top: 644px;
-  left: 947px;
+  top: 634px;
+  left: 937px;
   display: block;
   width: 36px;
   height: 36px;
